scss/theme/_theme.scss
/* ... */
.navbar {
  // visibility: hidden;
  z-index: 1000;
  font-size: 1rem;
  // max-height: $site-border-width;
  // padding: 0 $site-border-width;
  .navbar-brand {
    letter-spacing: 3px;
    font-kerning: none;
  }
  .navbar-title {
    margin: 0;
    color: $color-highlight;
  }
  a {
    border-bottom: none;
  }
  .nav-link {
    padding-right: 0;
  }
}

.card-stack {
  @include respond-below(sm) {
    display: flex;
    flex-direction: column;
    padding-top: $navbar-width;
  }
}

.content-card {
  // position: absolute !important;
  position: fixed !important;
  z-index: 102;
  top: 0;
  left: 0;
  width: 500px;
  height: 350px;
  padding: 0 !important;
  box-shadow: 0 5px 20px 0 rgba(0,0,0,0.2);
  overflow: hidden;
  border: $border-width $border-color solid;
  opacity: 1;
  transition: visible 0s linear 0.3s;
  color: $white;
  @include respond-below(sm) {
    position: relative !important;
    width: 100vw;
    height: 40vh;
    // top: auto;
  }

  &.card-hidden {
    visibility: hidden;
    opacity: 0;
  }
  .minimise {
    position: absolute;
    right: 0;
    top: 0;
    width: 40px;
    height: 40px;
    // background-color: red;
    z-index: 1000;
    opacity: 1;
    @include respond-below(md) {
      opacity: 1;
    }
    @include respond-below(sm) {
      visibility: hidden;
    }
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    span {
      font-size: 2rem;
      pointer-events: none;
    }
  }

  figure {
    position: relative;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    width: 100%;
    height: 100%;
  }

  &.weight-1 {
    // @extend .col-md-2;
    // height: 20%;
    @include respond-above(lg) {
      height: 10vw;
    }
    z-index: 101;
  }

  &.weight-2 {
    // @extend .col-md-3;
    // height: 25%;
    @include respond-above(lg) {
      height: 15vw;
    }
    z-index: 102;
  }

  &.weight-3 {
    // @extend .col-md-4;
    // height: 35%;
    @include respond-above(lg) {
      height: 20vw;
    }
    z-index: 103;
  }

  &.weight-4 {
    // @extend .col-md-5;
    // height: 40%;
    @include respond-above(lg) {
      height: 25vw;
    }
    z-index: 104;
  }

  &.weight-5 {
    // @extend .col-md-6;
    // height: 50%;
    @include respond-above(lg) {
      height: 30vw;
    }
    z-index: 105;
  }

  &.about-card {
    z-index: 106;
    color: $white;
    font-size: 2rem;
    top: auto;
    bottom: 200px;
    left: 200px;
    background-color: $color-highlight;
    width: 400px;
    height: 200px;
    @include respond-below(sm) {
      display: none;
    }
    p {
      margin: 30px;
    }
  }

  &.contact-card {
    z-index: 101;
    color: $color-highlight;
    font-size: 3.6rem;
    top: auto;
    background-color: $white;
    width: 800px;
    height: 500px;

    p {
      margin: 30px;
      width: 70%;
    }
    ul {
      position: absolute;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      width: 600px;
      bottom: 0;
      right: 0;
      font-size: 2rem;
      list-style: none;
      justify-content: flex-end;
      text-align: right;
      .primary {
        position: relative;
        width: 100%;
        padding-right: 15px;
      }
      .secondary {
        position: relative;
        width: auto;
        padding-right: 15px;
      }
    }
  }

  &.publications-card {
    @extend .weight-4;
    padding: 30px !important;
    background-color: white;
    color: $black;
    height: 70vh;
    max-height: 70vh;
    ul {
      list-style: none;
      padding: 0 !important;
      margin-top: 30px;
      li {
        width: auto;
        display: flex;
        justify-content: space-between;
        border-bottom: $border-color $border-width solid;
        padding-top: 5px;
        padding-bottom: 5px;
        p {
          // margin-top: 10px;
          margin-bottom: 0px;
        }
        a {
          border-bottom: none;
        }
        span {
          display: inline-block;
          font-family: "Favorit", "Helvetica Neue", sans-serif;
          margin-left: 15px;
          transform: scale(1.1) translateY(2px);
        }
      }
    }

  }
}
/* ... */

